@@ -3,22 +3,29 @@ package edu.Loopi.view;
 import edu.Loopi.entities.Notification;
 import edu.Loopi.entities.User;
 import edu.Loopi.services.NotificationService;
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
+import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
 import javafx.scene.text.FontWeight;
+import javafx.stage.Modality;
+import javafx.stage.Stage;
 
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class NotificationsContentView {
     private User currentUser;
     private NotificationService notificationService;
     private ListView<Notification> notificationList;
     private Label unreadCountLabel;
+    private ComboBox<String> typeFilter;
 
     public NotificationsContentView(User currentUser, NotificationService notificationService) {
         this.currentUser = currentUser;
@@ -30,16 +37,10 @@ public class NotificationsContentView {
         container.setPadding(new Insets(30));
         container.setStyle("-fx-background-color: #f8fafc;");
 
-        // HEADER
         HBox header = createHeader();
-
-        // STATISTIQUES
         HBox statsBox = createStatsBox();
-
-        // FILTRES
         HBox filterBar = createFilterBar();
 
-        // LISTE DES NOTIFICATIONS
         notificationList = new ListView<>();
         notificationList.setPrefHeight(500);
         notificationList.setCellFactory(lv -> new ListCell<Notification>() {
@@ -50,13 +51,18 @@ public class NotificationsContentView {
                     setGraphic(null);
                 } else {
                     setGraphic(createNotificationCell(n));
+
+                    setOnMouseClicked(e -> {
+                        if (e.getClickCount() == 2) {
+                            showNotificationDetails(n);
+                        }
+                    });
                 }
             }
         });
 
         loadNotifications();
 
-        // BOUTON TOUT MARQUER COMME LU
         Button markAllReadBtn = new Button("✓ Tout marquer comme lu");
         markAllReadBtn.setStyle("-fx-background-color: #3b82f6; -fx-text-fill: white; " +
                 "-fx-font-weight: bold; -fx-padding: 12 25; -fx-background-radius: 8; -fx-cursor: hand;");
@@ -144,8 +150,8 @@ public class NotificationsContentView {
         filterLabel.setFont(Font.font("Arial", FontWeight.BOLD, 13));
         filterLabel.setTextFill(Color.web("#0f172a"));
 
-        ComboBox<String> typeFilter = new ComboBox<>();
-        typeFilter.getItems().addAll("Toutes", "Nouveaux participants", "Participations annulées");
+        typeFilter = new ComboBox<>();
+        typeFilter.getItems().addAll("Toutes", "Approbations", "Refus", "Participants", "Publications", "Annulations");
         typeFilter.setValue("Toutes");
         typeFilter.setStyle("-fx-background-radius: 8; -fx-padding: 8 15; -fx-background-color: white; -fx-border-color: #e2e8f0;");
         typeFilter.setOnAction(e -> filterNotifications(typeFilter.getValue()));
@@ -171,10 +177,36 @@ public class NotificationsContentView {
         if ("Toutes".equals(filterType)) {
             notificationList.getItems().setAll(allNotifs);
         } else {
-            String type = filterType.equals("Nouveaux participants") ? "NOUVEAU_PARTICIPANT" : "PARTICIPANT_ANNULE";
-            List<Notification> filtered = allNotifs.stream()
-                    .filter(n -> type.equals(n.getType()))
-                    .toList();
+            List<Notification> filtered;
+            switch (filterType) {
+                case "Approbations":
+                    filtered = allNotifs.stream()
+                            .filter(n -> n.getType().contains("APPROUVE"))
+                            .collect(Collectors.toList());
+                    break;
+                case "Refus":
+                    filtered = allNotifs.stream()
+                            .filter(n -> n.getType().contains("REFUSE"))
+                            .collect(Collectors.toList());
+                    break;
+                case "Participants":
+                    filtered = allNotifs.stream()
+                            .filter(n -> n.getType().contains("PARTICIPANT"))
+                            .collect(Collectors.toList());
+                    break;
+                case "Publications":
+                    filtered = allNotifs.stream()
+                            .filter(n -> n.getType().contains("PUBLIE"))
+                            .collect(Collectors.toList());
+                    break;
+                case "Annulations":
+                    filtered = allNotifs.stream()
+                            .filter(n -> n.getType().contains("ANNULE"))
+                            .collect(Collectors.toList());
+                    break;
+                default:
+                    filtered = allNotifs;
+            }
             notificationList.getItems().setAll(filtered);
         }
     }
@@ -200,7 +232,57 @@ public class NotificationsContentView {
         HBox header = new HBox(10);
         header.setAlignment(Pos.CENTER_LEFT);
 
-        String icon = "NOUVEAU_PARTICIPANT".equals(n.getType()) ? "👤" : "🚫";
+        String icon = "";
+        String color = "";
+        String sourceInfo = "";
+
+        switch (n.getType()) {
+            case "EVENEMENT_APPROUVE":
+                icon = "✅";
+                color = "#10b981";
+                sourceInfo = "Admin: " + (n.getNomAdmin() != null ? n.getNomAdmin() : "Administrateur");
+                break;
+            case "EVENEMENT_REFUSE":
+                icon = "❌";
+                color = "#ef4444";
+                sourceInfo = "Admin: " + (n.getNomAdmin() != null ? n.getNomAdmin() : "Administrateur");
+                break;
+            case "NOUVEAU_PARTICIPANT":
+                icon = "👤";
+                color = "#3b82f6";
+                sourceInfo = "Participant: " + (n.getNomParticipant() != null ? n.getNomParticipant() : "Inconnu");
+                break;
+            case "PARTICIPANT_ANNULE":
+                icon = "🚫";
+                color = "#f97316";
+                sourceInfo = "Participant: " + (n.getNomParticipant() != null ? n.getNomParticipant() : "Inconnu");
+                break;
+            case "EVENEMENT_PUBLIE":
+                icon = "📢";
+                color = "#8b5cf6";
+                sourceInfo = "Système";
+                break;
+            case "EVENEMENT_MODIFIE":
+                icon = "✏️";
+                color = "#f59e0b";
+                sourceInfo = "Système";
+                break;
+            case "PARTICIPATION":
+                icon = "✅";
+                color = "#10b981";
+                sourceInfo = "Participant: " + (n.getNomParticipant() != null ? n.getNomParticipant() : "Inconnu");
+                break;
+            case "ANNULATION":
+                icon = "❌";
+                color = "#ef4444";
+                sourceInfo = "Participant: " + (n.getNomParticipant() != null ? n.getNomParticipant() : "Inconnu");
+                break;
+            default:
+                icon = "🔔";
+                color = "#6b7280";
+                sourceInfo = "Système";
+        }
+
         Label iconLabel = new Label(icon);
         iconLabel.setFont(Font.font("Segoe UI", FontWeight.BOLD, 20));
 
@@ -227,6 +309,68 @@ public class NotificationsContentView {
         messageLabel.setFont(Font.font("Segoe UI", 14));
         messageLabel.setTextFill(Color.web("#475569"));
         messageLabel.setWrapText(true);
+
+        VBox detailsBox = new VBox(5);
+        detailsBox.setPadding(new Insets(10, 0, 0, 20));
+
+        Label sourceLabel = new Label("📨 " + sourceInfo);
+        sourceLabel.setFont(Font.font("Segoe UI", FontWeight.BOLD, 12));
+        sourceLabel.setTextFill(Color.web(color));
+        detailsBox.getChildren().add(sourceLabel);
+
+        if (n.getNomAdmin() != null && !n.getNomAdmin().isEmpty() && !sourceInfo.contains("Admin")) {
+            HBox adminRow = new HBox(10);
+            adminRow.setAlignment(Pos.CENTER_LEFT);
+            Label adminIcon = new Label("👤 Admin:");
+            adminIcon.setFont(Font.font("Segoe UI", FontWeight.BOLD, 12));
+            adminIcon.setTextFill(Color.web("#475569"));
+            Label adminName = new Label(n.getNomAdmin());
+            adminName.setFont(Font.font("Segoe UI", 12));
+            adminName.setTextFill(Color.web("#0f172a"));
+            if (n.getEmailAdmin() != null && !n.getEmailAdmin().isEmpty()) {
+                Label adminEmail = new Label("(" + n.getEmailAdmin() + ")");
+                adminEmail.setFont(Font.font("Segoe UI", 10));
+                adminEmail.setTextFill(Color.web("#64748b"));
+                adminRow.getChildren().addAll(adminIcon, adminName, adminEmail);
+            } else {
+                adminRow.getChildren().addAll(adminIcon, adminName);
+            }
+            detailsBox.getChildren().add(adminRow);
+        }
+
+        if (n.getCommentaire() != null && !n.getCommentaire().isEmpty()) {
+            HBox commentRow = new HBox(10);
+            commentRow.setAlignment(Pos.CENTER_LEFT);
+            Label commentIcon = new Label("💬 Commentaire:");
+            commentIcon.setFont(Font.font("Segoe UI", FontWeight.BOLD, 12));
+            commentIcon.setTextFill(Color.web("#475569"));
+            Label commentText = new Label(n.getCommentaire());
+            commentText.setFont(Font.font("Segoe UI", 12));
+            commentText.setTextFill(Color.web("#0f172a"));
+            commentText.setWrapText(true);
+            commentRow.getChildren().addAll(commentIcon, commentText);
+            detailsBox.getChildren().add(commentRow);
+        }
+
+        if (n.getNomParticipant() != null && !n.getNomParticipant().isEmpty() && !sourceInfo.contains("Participant")) {
+            HBox participantRow = new HBox(10);
+            participantRow.setAlignment(Pos.CENTER_LEFT);
+            Label partIcon = new Label("👤 Participant:");
+            partIcon.setFont(Font.font("Segoe UI", FontWeight.BOLD, 12));
+            partIcon.setTextFill(Color.web("#475569"));
+            Label partName = new Label(n.getNomParticipant());
+            partName.setFont(Font.font("Segoe UI", 12));
+            partName.setTextFill(Color.web("#0f172a"));
+            if (n.getEmailParticipant() != null && !n.getEmailParticipant().isEmpty()) {
+                Label partEmail = new Label("(" + n.getEmailParticipant() + ")");
+                partEmail.setFont(Font.font("Segoe UI", 10));
+                partEmail.setTextFill(Color.web("#64748b"));
+                participantRow.getChildren().addAll(partIcon, partName, partEmail);
+            } else {
+                participantRow.getChildren().addAll(partIcon, partName);
+            }
+            detailsBox.getChildren().add(participantRow);
+        }
 
         HBox footer = new HBox(10);
         footer.setAlignment(Pos.CENTER_LEFT);
@@ -255,12 +399,16 @@ public class NotificationsContentView {
             updateStats();
         });
 
-        textContent.getChildren().addAll(titleRow, messageLabel, footer);
+        textContent.getChildren().addAll(titleRow, messageLabel);
+        if (!detailsBox.getChildren().isEmpty()) {
+            textContent.getChildren().add(detailsBox);
+        }
+        textContent.getChildren().add(footer);
+
         header.getChildren().addAll(iconLabel, textContent, spacer, markReadBtn);
 
         cell.getChildren().add(header);
 
-        // Marquer comme lu en cliquant sur la cellule
         cell.setOnMouseClicked(e -> {
             if (!n.isRead()) {
                 notificationService.marquerCommeLue(n.getId());
@@ -270,5 +418,233 @@ public class NotificationsContentView {
         });
 
         return cell;
+    }
+
+    private void showNotificationDetails(Notification notification) {
+        Stage dialog = new Stage();
+        dialog.initModality(Modality.APPLICATION_MODAL);
+        dialog.initOwner(notificationList.getScene().getWindow());
+        dialog.setTitle("Détails de la notification");
+
+        VBox content = new VBox(20);
+        content.setPadding(new Insets(25));
+        content.setPrefWidth(600);
+        content.setStyle("-fx-background-color: white; -fx-background-radius: 12; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);");
+
+        HBox header = new HBox(15);
+        header.setAlignment(Pos.CENTER_LEFT);
+
+        String icon = "";
+        String color = "";
+        String sourceInfo = "";
+
+        switch (notification.getType()) {
+            case "EVENEMENT_APPROUVE":
+                icon = "✅";
+                color = "#10b981";
+                sourceInfo = "Admin: " + (notification.getNomAdmin() != null ? notification.getNomAdmin() : "Administrateur");
+                break;
+            case "EVENEMENT_REFUSE":
+                icon = "❌";
+                color = "#ef4444";
+                sourceInfo = "Admin: " + (notification.getNomAdmin() != null ? notification.getNomAdmin() : "Administrateur");
+                break;
+            case "NOUVEAU_PARTICIPANT":
+                icon = "👤";
+                color = "#3b82f6";
+                sourceInfo = "Participant: " + (notification.getNomParticipant() != null ? notification.getNomParticipant() : "Inconnu");
+                break;
+            case "PARTICIPANT_ANNULE":
+                icon = "🚫";
+                color = "#f97316";
+                sourceInfo = "Participant: " + (notification.getNomParticipant() != null ? notification.getNomParticipant() : "Inconnu");
+                break;
+            case "EVENEMENT_PUBLIE":
+                icon = "📢";
+                color = "#8b5cf6";
+                sourceInfo = "Système";
+                break;
+            case "EVENEMENT_MODIFIE":
+                icon = "✏️";
+                color = "#f59e0b";
+                sourceInfo = "Système";
+                break;
+            case "PARTICIPATION":
+                icon = "✅";
+                color = "#10b981";
+                sourceInfo = "Participant: " + (notification.getNomParticipant() != null ? notification.getNomParticipant() : "Inconnu");
+                break;
+            case "ANNULATION":
+                icon = "❌";
+                color = "#ef4444";
+                sourceInfo = "Participant: " + (notification.getNomParticipant() != null ? notification.getNomParticipant() : "Inconnu");
+                break;
+            default:
+                icon = "🔔";
+                color = "#6b7280";
+                sourceInfo = "Système";
+        }
+
+        Label iconLabel = new Label(icon);
+        iconLabel.setFont(Font.font("Segoe UI", FontWeight.BOLD, 36));
+
+        VBox headerText = new VBox(5);
+        Label titleLabel = new Label(notification.getTitre());
+        titleLabel.setFont(Font.font("Segoe UI", FontWeight.BOLD, 22));
+        titleLabel.setTextFill(Color.web(color));
+        titleLabel.setWrapText(true);
+
+        Label dateLabel = new Label(notification.getFormattedDate());
+        dateLabel.setFont(Font.font("Segoe UI", 13));
+        dateLabel.setTextFill(Color.web("#64748b"));
+
+        headerText.getChildren().addAll(titleLabel, dateLabel);
+        header.getChildren().addAll(iconLabel, headerText);
+
+        Separator sep = new Separator();
+        sep.setPadding(new Insets(10, 0, 10, 0));
+
+        VBox detailsBox = new VBox(15);
+        detailsBox.setPadding(new Insets(10, 0, 10, 0));
+
+        HBox sourceBox = new HBox(10);
+        sourceBox.setAlignment(Pos.CENTER_LEFT);
+        Label sourceIcon = new Label("📨");
+        sourceIcon.setFont(Font.font("Arial", FontWeight.BOLD, 14));
+        Label sourceText = new Label("Source: " + sourceInfo);
+        sourceText.setFont(Font.font("Arial", FontWeight.BOLD, 14));
+        sourceText.setTextFill(Color.web(color));
+        sourceBox.getChildren().addAll(sourceIcon, sourceText);
+        detailsBox.getChildren().add(sourceBox);
+
+        Label messageLabel = new Label(notification.getMessage());
+        messageLabel.setWrapText(true);
+        messageLabel.setFont(Font.font("Segoe UI", 14));
+        messageLabel.setTextFill(Color.web("#1e293b"));
+        messageLabel.setStyle("-fx-font-weight: bold; -fx-padding: 10 0;");
+
+        detailsBox.getChildren().add(messageLabel);
+
+        if (notification.getNomAdmin() != null && !notification.getNomAdmin().isEmpty()) {
+            VBox adminBox = new VBox(8);
+            adminBox.setPadding(new Insets(15));
+            adminBox.setStyle("-fx-background-color: #f8fafc; -fx-background-radius: 8; -fx-border-color: #e2e8f0; -fx-border-radius: 8;");
+
+            Label adminTitle = new Label("👤 Informations de l'administrateur");
+            adminTitle.setFont(Font.font("Arial", FontWeight.BOLD, 14));
+            adminTitle.setTextFill(Color.web("#2196F3"));
+
+            GridPane adminGrid = new GridPane();
+            adminGrid.setHgap(15);
+            adminGrid.setVgap(8);
+
+            adminGrid.add(new Label("Nom:"), 0, 0);
+            Label adminName = new Label(notification.getNomAdmin());
+            adminName.setFont(Font.font("Arial", FontWeight.BOLD, 13));
+            adminName.setTextFill(Color.web("#0f172a"));
+            adminGrid.add(adminName, 1, 0);
+
+            if (notification.getEmailAdmin() != null && !notification.getEmailAdmin().isEmpty()) {
+                adminGrid.add(new Label("Email:"), 0, 1);
+                Label adminEmail = new Label(notification.getEmailAdmin());
+                adminEmail.setFont(Font.font("Arial", 13));
+                adminEmail.setTextFill(Color.web("#2563eb"));
+                adminGrid.add(adminEmail, 1, 1);
+            }
+
+            adminBox.getChildren().addAll(adminTitle, adminGrid);
+            detailsBox.getChildren().add(adminBox);
+        }
+
+        if (notification.getCommentaire() != null && !notification.getCommentaire().isEmpty()) {
+            VBox commentBox = new VBox(8);
+            commentBox.setPadding(new Insets(15));
+            commentBox.setStyle("-fx-background-color: #fff7ed; -fx-background-radius: 8; -fx-border-color: #fdba74; -fx-border-radius: 8;");
+
+            Label commentTitle = new Label("💬 Commentaire");
+            commentTitle.setFont(Font.font("Arial", FontWeight.BOLD, 14));
+            commentTitle.setTextFill(Color.web("#c2410c"));
+
+            TextArea commentArea = new TextArea(notification.getCommentaire());
+            commentArea.setWrapText(true);
+            commentArea.setEditable(false);
+            commentArea.setPrefRowCount(4);
+            commentArea.setStyle("-fx-control-inner-background: #fff7ed; -fx-text-fill: #0f172a;");
+
+            commentBox.getChildren().addAll(commentTitle, commentArea);
+            detailsBox.getChildren().add(commentBox);
+        }
+
+        if (notification.getNomParticipant() != null && !notification.getNomParticipant().isEmpty()) {
+            VBox participantBox = new VBox(8);
+            participantBox.setPadding(new Insets(15));
+            participantBox.setStyle("-fx-background-color: #f0f9ff; -fx-background-radius: 8; -fx-border-color: #7dd3fc; -fx-border-radius: 8;");
+
+            Label participantTitle = new Label("👤 Informations du participant");
+            participantTitle.setFont(Font.font("Arial", FontWeight.BOLD, 14));
+            participantTitle.setTextFill(Color.web("#0369a1"));
+
+            GridPane participantGrid = new GridPane();
+            participantGrid.setHgap(15);
+            participantGrid.setVgap(8);
+
+            participantGrid.add(new Label("Nom:"), 0, 0);
+            Label partName = new Label(notification.getNomParticipant());
+            partName.setFont(Font.font("Arial", FontWeight.BOLD, 13));
+            partName.setTextFill(Color.web("#0f172a"));
+            participantGrid.add(partName, 1, 0);
+
+            if (notification.getEmailParticipant() != null && !notification.getEmailParticipant().isEmpty()) {
+                participantGrid.add(new Label("Email:"), 0, 1);
+                Label partEmail = new Label(notification.getEmailParticipant());
+                partEmail.setFont(Font.font("Arial", 13));
+                partEmail.setTextFill(Color.web("#0369a1"));
+                participantGrid.add(partEmail, 1, 1);
+            }
+
+            participantBox.getChildren().addAll(participantTitle, participantGrid);
+            detailsBox.getChildren().add(participantBox);
+        }
+
+        if (notification.getEventTitre() != null && !notification.getEventTitre().isEmpty()) {
+            HBox eventBox = new HBox(15);
+            eventBox.setAlignment(Pos.CENTER_LEFT);
+            eventBox.setPadding(new Insets(10));
+            eventBox.setStyle("-fx-background-color: #f1f5f9; -fx-background-radius: 8;");
+
+            Label eventIcon = new Label("📅");
+            eventIcon.setFont(Font.font("Arial", FontWeight.BOLD, 18));
+
+            Label eventLabel = new Label("Événement concerné:");
+            eventLabel.setFont(Font.font("Arial", FontWeight.BOLD, 13));
+            eventLabel.setTextFill(Color.web("#475569"));
+
+            Label eventName = new Label(notification.getEventTitre());
+            eventName.setFont(Font.font("Arial", FontWeight.BOLD, 14));
+            eventName.setTextFill(Color.web("#2196F3"));
+
+            eventBox.getChildren().addAll(eventIcon, eventLabel, eventName);
+            detailsBox.getChildren().add(eventBox);
+        }
+
+        Button closeBtn = new Button("Fermer");
+        closeBtn.setStyle("-fx-background-color: #2196F3; -fx-text-fill: white; " +
+                "-fx-font-weight: bold; -fx-padding: 12 30; -fx-background-radius: 8; -fx-cursor: hand; -fx-font-size: 14px;");
+        closeBtn.setOnAction(e -> dialog.close());
+
+        VBox buttonBox = new VBox(closeBtn);
+        buttonBox.setAlignment(Pos.CENTER);
+        buttonBox.setPadding(new Insets(10, 0, 0, 0));
+
+        content.getChildren().addAll(header, sep, detailsBox, buttonBox);
+
+        ScrollPane scrollPane = new ScrollPane(content);
+        scrollPane.setFitToWidth(true);
+        scrollPane.setStyle("-fx-background: transparent; -fx-background-color: transparent;");
+        scrollPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.AS_NEEDED);
+
+        Scene scene = new Scene(scrollPane, 650, 700);
+        dialog.setScene(scene);
+        dialog.show();
     }
 }
